<?xml version="1.0"?>
<!--
#********************************************************************************
#* Copyright (C) 2017-2020 German Aerospace Center (DLR). 
#* Eclipse ADORe, Automated Driving Open Research https://eclipse.org/adore
#*
#* This program and the accompanying materials are made available under the 
#* terms of the Eclipse Public License 2.0 which is available at
#* http://www.eclipse.org/legal/epl-2.0.
#*
#* SPDX-License-Identifier: EPL-2.0 
#*
#* Contributors: 
#*   Daniel Heß - initial API and implementation
#********************************************************************************
-->
<package format="2">
  <name>adore_if_ros</name>
  <version>0.1.0</version>
  <description>Package for automated driving in ROS, using libadore</description>
  <maintainer email="Daniel.Hess@DLR.de">Daniel Hess</maintainer>
  <license>EPL-2.0</license>
  <!-- <url type="website">http://wiki.ros.org/adore_if_ros</url> -->
  <depend>roscpp</depend>  
  <depend>message_runtime</depend>
  <depend>adore_if_ros_msg</depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
