<?xml version="1.0"?>
<!--
#********************************************************************************
#* Copyright (C) 2017-2020 German Aerospace Center (DLR). 
#* Eclipse ADORe, Automated Driving Open Research https://eclipse.org/adore
#*
#* This program and the accompanying materials are made available under the 
#* terms of the Eclipse Public License 2.0 which is available at
#* http://www.eclipse.org/legal/epl-2.0.
#*
#* SPDX-License-Identifier: EPL-2.0 
#*
#* Contributors: 
#*   Daniel Heß - initial API and implementation
#********************************************************************************
-->
<package format="2">
  <name>adore_if_ros_msg</name>
  <version>0.0.1</version>
  <description>Definition of ROS messages for automated driving using libadore.</description>
  <maintainer email="Daniel.Hess@DLR.de">Daniel Hess</maintainer>
  <license>EPL-2.0</license>
     <build_depend>message_generation</build_depend> 
     <exec_depend>message_runtime</exec_depend> 
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
